--- a/index.css
+++ b/index.css
@@ -1,1 +1,99 @@
+@media {
+    body {
+        /* background: linear-gradient(-45deg, rgba(35,166,213,1) 25%, rgba(50,205,50,1) 50%, rgba(255,59,48,1) 75%); */
+        background-size: 400% 400%;
+        animation: gradient 15s infinite ease;
+        -webkit-animation: gradient 15s infinite ease;
+        margin: 0;
+        overflow: hidden;
+    }
 
+    @media (prefers-color-scheme: dark) {
+        body {
+            background: black;
+            color: white;
+        }
+    }
+
+    @media {
+        @keyframes gradient {
+            0% {
+                background-position: 0% 50%;
+            }
+
+            50% {
+                background-position: 100% 50%;
+            }
+
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+    }
+
+    body > header {
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        background: rgba(0,0,0,0.11);
+        height: 50px;
+        position: fixed;
+        top: 0;
+        width: 100%;
+    }
+
+    form {
+        margin: 0;
+    }
+
+    article, div, picture {
+        /* display: flex; */
+    }
+
+    column, flex, row {
+        display: flex;
+    }
+
+    span {
+        /* display: inline-flex; */
+    }
+
+    iframe {
+        background: white;
+        border: 0;
+        height: 100%;
+        width: 100%;
+    }
+
+    input[type="text"] {
+        background-color: transparent;
+        bordeR: none;
+    }
+
+    input[type="text"]:focus {
+        outline: none;
+    }
+
+    picture {
+        position: relative;
+    }
+}
+
+@media {
+    [placeholder]:not(input):before {
+        content: attr(placeholder);
+        opacity: 0.5;
+    }
+}
+
+@media {
+    .component {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        min-height: 100%;
+    }
+
+    .component:not(.active) {
+        display: none;
+    }
+}
